Fixed biodata box too small again.
Change min-height attribute.

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body {
     margin: auto;
     position: relative;
     width: 90vw;
-    min-height: 494px;
+    min-height: 527px;
     height: 90vh;
     background-color: rgba(0, 0, 0, 0.5);
 }
